test/plugin/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    INT_CONST_OCT
    FLOAT_CONST
    RESTRICT
    HEX_XFLOAT_CONST
    ELSE
    TYPEID
    INT_CONST_HEX
    INLINE

Grammar

Rule 0     S' -> translation_unit
Rule 1     primary_expression -> ID
Rule 2     primary_expression -> INT_CONST_DEC
Rule 3     primary_expression -> STRING_LITERAL
Rule 4     primary_expression -> LPAREN expression RPAREN
Rule 5     postfix_expression -> primary_expression
Rule 6     postfix_expression -> postfix_expression LSQUARE expression RSQUARE
Rule 7     postfix_expression -> postfix_expression LPAREN RPAREN
Rule 8     postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 9     postfix_expression -> postfix_expression DOT ID
Rule 10    postfix_expression -> postfix_expression PTR_OP ID
Rule 11    postfix_expression -> postfix_expression INC
Rule 12    postfix_expression -> postfix_expression DEC
Rule 13    argument_expression_list -> assignment_expression
Rule 14    argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 15    unary_expression -> postfix_expression
Rule 16    unary_expression -> INC unary_expression
Rule 17    unary_expression -> DEC unary_expression
Rule 18    unary_expression -> unary_operator cast_expression
Rule 19    unary_expression -> SIZEOF unary_expression
Rule 20    unary_expression -> SIZEOF LPAREN type_name RPAREN
Rule 21    unary_operator -> BAND
Rule 22    unary_operator -> TIMES
Rule 23    unary_operator -> PLUS
Rule 24    unary_operator -> MINUS
Rule 25    unary_operator -> BNOT
Rule 26    unary_operator -> LNOT
Rule 27    cast_expression -> unary_expression
Rule 28    cast_expression -> LPAREN type_name RPAREN cast_expression
Rule 29    multiplicative_expression -> cast_expression
Rule 30    multiplicative_expression -> multiplicative_expression TIMES cast_expression
Rule 31    multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 32    multiplicative_expression -> multiplicative_expression MOD cast_expression
Rule 33    additive_expression -> multiplicative_expression
Rule 34    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 35    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 36    shift_expression -> additive_expression
Rule 37    shift_expression -> shift_expression LSHIFT additive_expression
Rule 38    shift_expression -> shift_expression RSHIFT additive_expression
Rule 39    relational_expression -> shift_expression
Rule 40    relational_expression -> relational_expression LT shift_expression
Rule 41    relational_expression -> relational_expression GT shift_expression
Rule 42    relational_expression -> relational_expression LEQ shift_expression
Rule 43    relational_expression -> relational_expression GEQ shift_expression
Rule 44    equality_expression -> relational_expression
Rule 45    equality_expression -> equality_expression EQ relational_expression
Rule 46    equality_expression -> equality_expression NEQ relational_expression
Rule 47    and_expression -> equality_expression
Rule 48    and_expression -> and_expression BAND equality_expression
Rule 49    exclusive_or_expression -> and_expression
Rule 50    exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 51    inclusive_or_expression -> exclusive_or_expression
Rule 52    inclusive_or_expression -> inclusive_or_expression BOR exclusive_or_expression
Rule 53    logical_and_expression -> inclusive_or_expression
Rule 54    logical_and_expression -> logical_and_expression LAND inclusive_or_expression
Rule 55    logical_or_expression -> logical_and_expression
Rule 56    logical_or_expression -> logical_or_expression LOR logical_and_expression
Rule 57    conditional_expression -> logical_or_expression
Rule 58    conditional_expression -> logical_or_expression IS_TRUE expression COLON conditional_expression
Rule 59    assignment_expression -> conditional_expression
Rule 60    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 61    assignment_operator -> ASSIGN
Rule 62    assignment_operator -> MUL_ASSIGN
Rule 63    assignment_operator -> DIV_ASSIGN
Rule 64    assignment_operator -> MOD_ASSIGN
Rule 65    assignment_operator -> ADD_ASSIGN
Rule 66    assignment_operator -> SUB_ASSIGN
Rule 67    assignment_operator -> LSHIFT_ASSIGN
Rule 68    assignment_operator -> RSHIFT_ASSIGN
Rule 69    assignment_operator -> AND_ASSIGN
Rule 70    assignment_operator -> XOR_ASSIGN
Rule 71    assignment_operator -> OR_ASSIGN
Rule 72    expression -> assignment_expression
Rule 73    expression -> expression COMMA assignment_expression
Rule 74    constant_expression -> conditional_expression
Rule 75    declaration -> declaration_specifiers SEMICOLON
Rule 76    declaration -> declaration_specifiers init_declarator_list SEMICOLON
Rule 77    declaration_specifiers -> storage_class_specifier
Rule 78    declaration_specifiers -> storage_class_specifier declaration_specifiers
Rule 79    declaration_specifiers -> type_specifier
Rule 80    declaration_specifiers -> type_specifier declaration_specifiers
Rule 81    declaration_specifiers -> type_qualifier
Rule 82    declaration_specifiers -> type_qualifier declaration_specifiers
Rule 83    init_declarator_list -> init_declarator
Rule 84    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 85    init_declarator -> declarator
Rule 86    init_declarator -> declarator ASSIGN initializer
Rule 87    storage_class_specifier -> TYPEDEF
Rule 88    storage_class_specifier -> EXTERN
Rule 89    storage_class_specifier -> STATIC
Rule 90    storage_class_specifier -> AUTO
Rule 91    storage_class_specifier -> REGISTER
Rule 92    type_specifier -> VOID
Rule 93    type_specifier -> CHAR
Rule 94    type_specifier -> SHORT
Rule 95    type_specifier -> INT
Rule 96    type_specifier -> LONG
Rule 97    type_specifier -> FLOAT
Rule 98    type_specifier -> DOUBLE
Rule 99    type_specifier -> SIGNED
Rule 100   type_specifier -> UNSIGNED
Rule 101   type_specifier -> struct_or_union_specifier
Rule 102   type_specifier -> enum_specifier
Rule 103   struct_or_union_specifier -> struct_or_union ID LBRACE struct_declaration_list RBRACE
Rule 104   struct_or_union_specifier -> struct_or_union LBRACE struct_declaration_list RBRACE
Rule 105   struct_or_union_specifier -> struct_or_union ID
Rule 106   struct_or_union -> STRUCT
Rule 107   struct_or_union -> UNION
Rule 108   struct_declaration_list -> struct_declaration
Rule 109   struct_declaration_list -> struct_declaration_list struct_declaration
Rule 110   struct_declaration -> specifier_qualifier_list struct_declarator_list SEMICOLON
Rule 111   specifier_qualifier_list -> type_specifier specifier_qualifier_list
Rule 112   specifier_qualifier_list -> type_specifier
Rule 113   specifier_qualifier_list -> type_qualifier specifier_qualifier_list
Rule 114   specifier_qualifier_list -> type_qualifier
Rule 115   struct_declarator_list -> struct_declarator
Rule 116   struct_declarator_list -> struct_declarator_list COMMA struct_declarator
Rule 117   struct_declarator -> declarator
Rule 118   struct_declarator -> COLON constant_expression
Rule 119   struct_declarator -> declarator COLON constant_expression
Rule 120   enum_specifier -> ENUM LBRACE enumerator_list RBRACE
Rule 121   enum_specifier -> ENUM ID LBRACE enumerator_list RBRACE
Rule 122   enum_specifier -> ENUM ID
Rule 123   enumerator_list -> enumerator
Rule 124   enumerator_list -> enumerator_list COMMA enumerator
Rule 125   enumerator -> ID
Rule 126   enumerator -> ID ASSIGN constant_expression
Rule 127   type_qualifier -> CONST
Rule 128   type_qualifier -> VOLATILE
Rule 129   declarator -> pointer direct_declarator
Rule 130   declarator -> direct_declarator
Rule 131   direct_declarator -> ID
Rule 132   direct_declarator -> LPAREN declarator RPAREN
Rule 133   direct_declarator -> direct_declarator [ constant_expression RSQUARE
Rule 134   direct_declarator -> direct_declarator [ RSQUARE
Rule 135   direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN
Rule 136   direct_declarator -> direct_declarator LPAREN identifier_list RPAREN
Rule 137   direct_declarator -> direct_declarator LPAREN RPAREN
Rule 138   pointer -> TIMES
Rule 139   pointer -> * type_qualifier_list
Rule 140   pointer -> * pointer
Rule 141   pointer -> * type_qualifier_list pointer
Rule 142   type_qualifier_list -> type_qualifier
Rule 143   type_qualifier_list -> type_qualifier_list type_qualifier
Rule 144   parameter_type_list -> parameter_list
Rule 145   parameter_type_list -> parameter_list COMMA ELLIPSIS
Rule 146   parameter_list -> parameter_declaration
Rule 147   parameter_list -> parameter_list COMMA parameter_declaration
Rule 148   parameter_declaration -> declaration_specifiers declarator
Rule 149   parameter_declaration -> declaration_specifiers abstract_declarator
Rule 150   parameter_declaration -> declaration_specifiers
Rule 151   identifier_list -> ID
Rule 152   identifier_list -> identifier_list COMMA ID
Rule 153   type_name -> specifier_qualifier_list
Rule 154   type_name -> specifier_qualifier_list abstract_declarator
Rule 155   abstract_declarator -> pointer
Rule 156   abstract_declarator -> direct_abstract_declarator
Rule 157   abstract_declarator -> pointer direct_abstract_declarator
Rule 158   direct_abstract_declarator -> LPAREN abstract_declarator RPAREN
Rule 159   direct_abstract_declarator -> [ RSQUARE
Rule 160   direct_abstract_declarator -> [ constant_expression RSQUARE
Rule 161   direct_abstract_declarator -> direct_abstract_declarator [ RSQUARE
Rule 162   direct_abstract_declarator -> direct_abstract_declarator [ constant_expression RSQUARE
Rule 163   direct_abstract_declarator -> LPAREN RPAREN
Rule 164   direct_abstract_declarator -> LPAREN parameter_type_list RPAREN
Rule 165   direct_abstract_declarator -> direct_abstract_declarator LPAREN RPAREN
Rule 166   direct_abstract_declarator -> direct_abstract_declarator LPAREN parameter_type_list RPAREN
Rule 167   initializer -> assignment_expression
Rule 168   initializer -> LBRACE initializer_list RBRACE
Rule 169   initializer -> LBRACE initializer_list COMMA RBRACE
Rule 170   initializer_list -> initializer
Rule 171   initializer_list -> initializer_list COMMA initializer
Rule 172   statement -> labeled_statement
Rule 173   statement -> compound_statement
Rule 174   statement -> expression_statement
Rule 175   statement -> selection_statement
Rule 176   statement -> iteration_statement
Rule 177   statement -> jump_statement
Rule 178   labeled_statement -> ID COLON statement
Rule 179   labeled_statement -> CASE constant_expression COLON statement
Rule 180   labeled_statement -> DEFAULT COLON statement
Rule 181   compound_statement -> LBRACE RBRACE
Rule 182   compound_statement -> LBRACE statement_list RBRACE
Rule 183   compound_statement -> LBRACE declaration_list RBRACE
Rule 184   compound_statement -> LBRACE declaration_list statement_list RBRACE
Rule 185   declaration_list -> declaration
Rule 186   declaration_list -> declaration_list declaration
Rule 187   statement_list -> statement
Rule 188   statement_list -> statement_list statement
Rule 189   expression_statement -> SEMICOLON
Rule 190   expression_statement -> expression SEMICOLON
Rule 191   selection_statement -> IF LPAREN expression RPAREN statement
Rule 192   selection_statement -> SWITCH LPAREN expression RPAREN statement
Rule 193   iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 194   iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMICOLON
Rule 195   iteration_statement -> FOR LPAREN expression_statement expression_statement RPAREN statement
Rule 196   iteration_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 197   jump_statement -> GOTO ID SEMICOLON
Rule 198   jump_statement -> CONTINUE SEMICOLON
Rule 199   jump_statement -> BREAK SEMICOLON
Rule 200   jump_statement -> RETURN SEMICOLON
Rule 201   jump_statement -> RETURN expression SEMICOLON
Rule 202   translation_unit -> external_declaration
Rule 203   translation_unit -> translation_unit external_declaration
Rule 204   external_declaration -> function_definition
Rule 205   external_declaration -> declaration
Rule 206   function_definition -> declaration_specifiers declarator declaration_list compound_statement
Rule 207   function_definition -> declaration_specifiers declarator compound_statement
Rule 208   function_definition -> declarator declaration_list compound_statement
Rule 209   function_definition -> declarator compound_statement

Terminals, with rules where they appear

*                    : 139 140 141
ADD_ASSIGN           : 65
AND_ASSIGN           : 69
ASSIGN               : 61 86 126
AUTO                 : 90
BAND                 : 21 48
BNOT                 : 25
BOR                  : 52
BREAK                : 199
CASE                 : 179
CHAR                 : 93
COLON                : 58 118 119 178 179 180
COMMA                : 14 73 84 116 124 145 147 152 169 171
CONST                : 127
CONTINUE             : 198
DEC                  : 12 17
DEFAULT              : 180
DIVIDE               : 31
DIV_ASSIGN           : 63
DO                   : 194
DOT                  : 9
DOUBLE               : 98
ELLIPSIS             : 145
ELSE                 : 
ENUM                 : 120 121 122
EQ                   : 45
EXTERN               : 88
FLOAT                : 97
FLOAT_CONST          : 
FOR                  : 195 196
GEQ                  : 43
GOTO                 : 197
GT                   : 41
HEX_XFLOAT_CONST     : 
ID                   : 1 9 10 103 105 121 122 125 126 131 151 152 178 197
IF                   : 191
INC                  : 11 16
INLINE               : 
INT                  : 95
INT_CONST_DEC        : 2
INT_CONST_HEX        : 
INT_CONST_OCT        : 
IS_TRUE              : 58
LAND                 : 54
LBRACE               : 103 104 120 121 168 169 181 182 183 184
LEQ                  : 42
LNOT                 : 26
LONG                 : 96
LOR                  : 56
LPAREN               : 4 7 8 20 28 132 135 136 137 158 163 164 165 166 191 192 193 194 195 196
LSHIFT               : 37
LSHIFT_ASSIGN        : 67
LSQUARE              : 6
LT                   : 40
MINUS                : 24 35
MOD                  : 32
MOD_ASSIGN           : 64
MUL_ASSIGN           : 62
NEQ                  : 46
OR_ASSIGN            : 71
PLUS                 : 23 34
PTR_OP               : 10
RBRACE               : 103 104 120 121 168 169 181 182 183 184
REGISTER             : 91
RESTRICT             : 
RETURN               : 200 201
RPAREN               : 4 7 8 20 28 132 135 136 137 158 163 164 165 166 191 192 193 194 195 196
RSHIFT               : 38
RSHIFT_ASSIGN        : 68
RSQUARE              : 6 133 134 159 160 161 162
SEMICOLON            : 75 76 110 189 190 194 197 198 199 200 201
SHORT                : 94
SIGNED               : 99
SIZEOF               : 19 20
STATIC               : 89
STRING_LITERAL       : 3
STRUCT               : 106
SUB_ASSIGN           : 66
SWITCH               : 192
TIMES                : 22 30 138
TYPEDEF              : 87
TYPEID               : 
UNION                : 107
UNSIGNED             : 100
VOID                 : 92
VOLATILE             : 128
WHILE                : 193 194
XOR                  : 50
XOR_ASSIGN           : 70
[                    : 133 134 159 160 161 162
error                : 

Nonterminals, with rules where they appear

abstract_declarator  : 149 154 158
additive_expression  : 34 35 36 37 38
and_expression       : 48 49 50
argument_expression_list : 8 14
assignment_expression : 13 14 60 72 73 167
assignment_operator  : 60
cast_expression      : 18 28 29 30 31 32
compound_statement   : 173 206 207 208 209
conditional_expression : 58 59 74
constant_expression  : 118 119 126 133 160 162 179
declaration          : 185 186 205
declaration_list     : 183 184 186 206 208
declaration_specifiers : 75 76 78 80 82 148 149 150 206 207
declarator           : 85 86 117 119 132 148 206 207 208 209
direct_abstract_declarator : 156 157 161 162 165 166
direct_declarator    : 129 130 133 134 135 136 137
enum_specifier       : 102
enumerator           : 123 124
enumerator_list      : 120 121 124
equality_expression  : 45 46 47 48
exclusive_or_expression : 50 51 52
expression           : 4 6 58 73 190 191 192 193 194 196 201
expression_statement : 174 195 195 196 196
external_declaration : 202 203
function_definition  : 204
identifier_list      : 136 152
inclusive_or_expression : 52 53 54
init_declarator      : 83 84
init_declarator_list : 76 84
initializer          : 86 170 171
initializer_list     : 168 169 171
iteration_statement  : 176
jump_statement       : 177
labeled_statement    : 172
logical_and_expression : 54 55 56
logical_or_expression : 56 57 58
multiplicative_expression : 30 31 32 33 34 35
parameter_declaration : 146 147
parameter_list       : 144 145 147
parameter_type_list  : 135 164 166
pointer              : 129 140 141 155 157
postfix_expression   : 6 7 8 9 10 11 12 15
primary_expression   : 5
relational_expression : 40 41 42 43 44 45 46
selection_statement  : 175
shift_expression     : 37 38 39 40 41 42 43
specifier_qualifier_list : 110 111 113 153 154
statement            : 178 179 180 187 188 191 192 193 194 195 196
statement_list       : 182 184 188
storage_class_specifier : 77 78
struct_declaration   : 108 109
struct_declaration_list : 103 104 109
struct_declarator    : 115 116
struct_declarator_list : 110 116
struct_or_union      : 103 104 105
struct_or_union_specifier : 101
translation_unit     : 203 0
type_name            : 20 28
type_qualifier       : 81 82 113 114 142 143
type_qualifier_list  : 139 141 143
type_specifier       : 79 80 111 112
unary_expression     : 16 17 19 27 60
unary_operator       : 18

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (202) translation_unit -> . external_declaration
    (203) translation_unit -> . translation_unit external_declaration
    (204) external_declaration -> . function_definition
    (205) external_declaration -> . declaration
    (206) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (207) function_definition -> . declaration_specifiers declarator compound_statement
    (208) function_definition -> . declarator declaration_list compound_statement
    (209) function_definition -> . declarator compound_statement
    (75) declaration -> . declaration_specifiers SEMICOLON
    (76) declaration -> . declaration_specifiers init_declarator_list SEMICOLON
    (77) declaration_specifiers -> . storage_class_specifier
    (78) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (79) declaration_specifiers -> . type_specifier
    (80) declaration_specifiers -> . type_specifier declaration_specifiers
    (81) declaration_specifiers -> . type_qualifier
    (82) declaration_specifiers -> . type_qualifier declaration_specifiers
    (129) declarator -> . pointer direct_declarator
    (130) declarator -> . direct_declarator
    (87) storage_class_specifier -> . TYPEDEF
    (88) storage_class_specifier -> . EXTERN
    (89) storage_class_specifier -> . STATIC
    (90) storage_class_specifier -> . AUTO
    (91) storage_class_specifier -> . REGISTER
    (92) type_specifier -> . VOID
    (93) type_specifier -> . CHAR
    (94) type_specifier -> . SHORT
    (95) type_specifier -> . INT
    (96) type_specifier -> . LONG
    (97) type_specifier -> . FLOAT
    (98) type_specifier -> . DOUBLE
    (99) type_specifier -> . SIGNED
    (100) type_specifier -> . UNSIGNED
    (101) type_specifier -> . struct_or_union_specifier
    (102) type_specifier -> . enum_specifier
    (127) type_qualifier -> . CONST
    (128) type_qualifier -> . VOLATILE
    (138) pointer -> . TIMES
    (139) pointer -> . * type_qualifier_list
    (140) pointer -> . * pointer
    (141) pointer -> . * type_qualifier_list pointer
    (131) direct_declarator -> . ID
    (132) direct_declarator -> . LPAREN declarator RPAREN
    (133) direct_declarator -> . direct_declarator [ constant_expression RSQUARE
    (134) direct_declarator -> . direct_declarator [ RSQUARE
    (135) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (136) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (137) direct_declarator -> . direct_declarator LPAREN RPAREN
    (103) struct_or_union_specifier -> . struct_or_union ID LBRACE struct_declaration_list RBRACE
    (104) struct_or_union_specifier -> . struct_or_union LBRACE struct_declaration_list RBRACE
    (105) struct_or_union_specifier -> . struct_or_union ID
    (120) enum_specifier -> . ENUM LBRACE enumerator_list RBRACE
    (121) enum_specifier -> . ENUM ID LBRACE enumerator_list RBRACE
    (122) enum_specifier -> . ENUM ID
    (106) struct_or_union -> . STRUCT
    (107) struct_or_union -> . UNION

    TYPEDEF         shift and go to state 20
    EXTERN          shift and go to state 10
    STATIC          shift and go to state 9
    AUTO            shift and go to state 22
    REGISTER        shift and go to state 15
    VOID            shift and go to state 6
    CHAR            shift and go to state 8
    SHORT           shift and go to state 2
    INT             shift and go to state 31
    LONG            shift and go to state 17
    FLOAT           shift and go to state 28
    DOUBLE          shift and go to state 32
    SIGNED          shift and go to state 34
    UNSIGNED        shift and go to state 16
    CONST           shift and go to state 3
    VOLATILE        shift and go to state 36
    TIMES           shift and go to state 24
    *               shift and go to state 7
    ID              shift and go to state 27
    LPAREN          shift and go to state 4
    ENUM            shift and go to state 21
    STRUCT          shift and go to state 30
    UNION           shift and go to state 18

    storage_class_specifier        shift and go to state 1
    struct_or_union_specifier      shift and go to state 5
    pointer                        shift and go to state 12
    external_declaration           shift and go to state 13
    type_specifier                 shift and go to state 14
    struct_or_union                shift and go to state 11
    direct_declarator              shift and go to state 23
    declaration_specifiers         shift and go to state 25
    declaration                    shift and go to state 26
    function_definition            shift and go to state 29
    enum_specifier                 shift and go to state 35
    type_qualifier                 shift and go to state 33
    translation_unit               shift and go to state 19
    declarator                     shift and go to state 37

state 1

    (77) declaration_specifiers -> storage_class_specifier .
    (78) declaration_specifiers -> storage_class_specifier . declaration_specifiers
    (77) declaration_specifiers -> . storage_class_specifier
    (78) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (79) declaration_specifiers -> . type_specifier
    (80) declaration_specifiers -> . type_specifier declaration_specifiers
    (81) declaration_specifiers -> . type_qualifier
    (82) declaration_specifiers -> . type_qualifier declaration_specifiers
    (87) storage_class_specifier -> . TYPEDEF
    (88) storage_class_specifier -> . EXTERN
    (89) storage_class_specifier -> . STATIC
    (90) storage_class_specifier -> . AUTO
    (91) storage_class_specifier -> . REGISTER
    (92) type_specifier -> . VOID
    (93) type_specifier -> . CHAR
    (94) type_specifier -> . SHORT
    (95) type_specifier -> . INT
    (96) type_specifier -> . LONG
    (97) type_specifier -> . FLOAT
    (98) type_specifier -> . DOUBLE
    (99) type_specifier -> . SIGNED
    (100) type_specifier -> . UNSIGNED
    (101) type_specifier -> . struct_or_union_specifier
    (102) type_specifier -> . enum_specifier
    (127) type_qualifier -> . CONST
    (128) type_qualifier -> . VOLATILE
    (103) struct_or_union_specifier -> . struct_or_union ID LBRACE struct_declaration_list RBRACE
    (104) struct_or_union_specifier -> . struct_or_union LBRACE struct_declaration_list RBRACE
    (105) struct_or_union_specifier -> . struct_or_union ID
    (120) enum_specifier -> . ENUM LBRACE enumerator_list RBRACE
    (121) enum_specifier -> . ENUM ID LBRACE enumerator_list RBRACE
    (122) enum_specifier -> . ENUM ID
    (106) struct_or_union -> . STRUCT
    (107) struct_or_union -> . UNION

    SEMICOLON       reduce using rule 77 (declaration_specifiers -> storage_class_specifier .)
    TIMES           reduce using rule 77 (declaration_specifiers -> storage_class_specifier .)
    *               reduce using rule 77 (declaration_specifiers -> storage_class_specifier .)
    ID              reduce using rule 77 (declaration_specifiers -> storage_class_specifier .)
    LPAREN          reduce using rule 77 (declaration_specifiers -> storage_class_specifier .)
    [               reduce using rule 77 (declaration_specifiers -> storage_class_specifier .)
    COMMA           reduce using rule 77 (declaration_specifiers -> storage_class_specifier .)
    RPAREN          reduce using rule 77 (declaration_specifiers -> storage_class_specifier .)
    TYPEDEF         shift and go to state 20
    EXTERN          shift and go to state 10
    STATIC          shift and go to state 9
    AUTO            shift and go to state 22
    REGISTER        shift and go to state 15
    VOID            shift and go to state 6
    CHAR            shift and go to state 8
    SHORT           shift and go to state 2
    INT             shift and go to state 31
    LONG            shift and go to state 17
    FLOAT           shift and go to state 28
    DOUBLE          shift and go to state 32
    SIGNED          shift and go to state 34
    UNSIGNED        shift and go to state 16
    CONST           shift and go to state 3
    VOLATILE        shift and go to state 36
    ENUM            shift and go to state 21
    STRUCT          shift and go to state 30
    UNION           shift and go to state 18

    storage_class_specifier        shift and go to state 1
    struct_or_union                shift and go to state 11
    type_specifier                 shift and go to state 14
    enum_specifier                 shift and go to state 35
    struct_or_union_specifier      shift and go to state 5
    type_qualifier                 shift and go to state 33
    declaration_specifiers         shift and go to state 38

state 2

    (94) type_specifier -> SHORT .

    VOID            reduce using rule 94 (type_specifier -> SHORT .)
    CHAR            reduce using rule 94 (type_specifier -> SHORT .)
    SHORT           reduce using rule 94 (type_specifier -> SHORT .)
    INT             reduce using rule 94 (type_specifier -> SHORT .)
    LONG            reduce using rule 94 (type_specifier -> SHORT .)
    FLOAT           reduce using rule 94 (type_specifier -> SHORT .)
    DOUBLE          reduce using rule 94 (type_specifier -> SHORT .)
    SIGNED          reduce using rule 94 (type_specifier -> SHORT .)
    UNSIGNED        reduce using rule 94 (type_specifier -> SHORT .)
    CONST           reduce using rule 94 (type_specifier -> SHORT .)
    VOLATILE        reduce using rule 94 (type_specifier -> SHORT .)
    ENUM            reduce using rule 94 (type_specifier -> SHORT .)
    STRUCT          reduce using rule 94 (type_specifier -> SHORT .)
    UNION           reduce using rule 94 (type_specifier -> SHORT .)
    TIMES           reduce using rule 94 (type_specifier -> SHORT .)
    *               reduce using rule 94 (type_specifier -> SHORT .)
    LPAREN          reduce using rule 94 (type_specifier -> SHORT .)
    [               reduce using rule 94 (type_specifier -> SHORT .)
    RPAREN          reduce using rule 94 (type_specifier -> SHORT .)
    TYPEDEF         reduce using rule 94 (type_specifier -> SHORT .)
    EXTERN          reduce using rule 94 (type_specifier -> SHORT .)
    STATIC          reduce using rule 94 (type_specifier -> SHORT .)
    AUTO            reduce using rule 94 (type_specifier -> SHORT .)
    REGISTER        reduce using rule 94 (type_specifier -> SHORT .)
    ID              reduce using rule 94 (type_specifier -> SHORT .)
    COMMA           reduce using rule 94 (type_specifier -> SHORT .)
    SEMICOLON       reduce using rule 94 (type_specifier -> SHORT .)
    COLON           reduce using rule 94 (type_specifier -> SHORT .)


state 3

    (127) type_qualifier -> CONST .

    TYPEDEF         reduce using rule 127 (type_qualifier -> CONST .)
    EXTERN          reduce using rule 127 (type_qualifier -> CONST .)
    STATIC          reduce using rule 127 (type_qualifier -> CONST .)
    AUTO            reduce using rule 127 (type_qualifier -> CONST .)
    REGISTER        reduce using rule 127 (type_qualifier -> CONST .)
    VOID            reduce using rule 127 (type_qualifier -> CONST .)
    CHAR            reduce using rule 127 (type_qualifier -> CONST .)
    SHORT           reduce using rule 127 (type_qualifier -> CONST .)
    INT             reduce using rule 127 (type_qualifier -> CONST .)
    LONG            reduce using rule 127 (type_qualifier -> CONST .)
    FLOAT           reduce using rule 127 (type_qualifier -> CONST .)
    DOUBLE          reduce using rule 127 (type_qualifier -> CONST .)
    SIGNED          reduce using rule 127 (type_qualifier -> CONST .)
    UNSIGNED        reduce using rule 127 (type_qualifier -> CONST .)
    CONST           reduce using rule 127 (type_qualifier -> CONST .)
    VOLATILE        reduce using rule 127 (type_qualifier -> CONST .)
    ENUM            reduce using rule 127 (type_qualifier -> CONST .)
    STRUCT          reduce using rule 127 (type_qualifier -> CONST .)
    UNION           reduce using rule 127 (type_qualifier -> CONST .)
    TIMES           reduce using rule 127 (type_qualifier -> CONST .)
    *               reduce using rule 127 (type_qualifier -> CONST .)
    ID              reduce using rule 127 (type_qualifier -> CONST .)
    LPAREN          reduce using rule 127 (type_qualifier -> CONST .)
    [               reduce using rule 127 (type_qualifier -> CONST .)
    COMMA           reduce using rule 127 (type_qualifier -> CONST .)
    RPAREN          reduce using rule 127 (type_qualifier -> CONST .)
    SEMICOLON       reduce using rule 127 (type_qualifier -> CONST .)
    COLON           reduce using rule 127 (type_qualifier -> CONST .)


state 4

    (132) direct_declarator -> LPAREN . declarator RPAREN
    (129) declarator -> . pointer direct_declarator
    (130) declarator -> . direct_declarator
    (138) pointer -> . TIMES
    (139) pointer -> . * type_qualifier_list
    (140) pointer -> . * pointer
    (141) pointer -> . * type_qualifier_list pointer
    (131) direct_declarator -> . ID
    (132) direct_declarator -> . LPAREN declarator RPAREN
    (133) direct_declarator -> . direct_declarator [ constant_expression RSQUARE
    (134) direct_declarator -> . direct_declarator [ RSQUARE
    (135) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (136) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (137) direct_declarator -> . direct_declarator LPAREN RPAREN

    TIMES           shift and go to state 24
    *               shift and go to state 7
    ID              shift and go to state 27
    LPAREN          shift and go to state 4

    direct_declarator              shift and go to state 23
    declarator                     shift and go to state 39
    pointer                        shift and go to state 12

state 5

    (101) type_specifier -> struct_or_union_specifier .

    VOID            reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    CHAR            reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    SHORT           reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    INT             reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    LONG            reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    FLOAT           reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    DOUBLE          reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    SIGNED          reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    UNSIGNED        reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    CONST           reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    VOLATILE        reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    ENUM            reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    STRUCT          reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    UNION           reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    TIMES           reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    *               reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    LPAREN          reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    [               reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    RPAREN          reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    TYPEDEF         reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    EXTERN          reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    STATIC          reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    AUTO            reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    REGISTER        reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    ID              reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    COMMA           reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    SEMICOLON       reduce using rule 101 (type_specifier -> struct_or_union_specifier .)
    COLON           reduce using rule 101 (type_specifier -> struct_or_union_specifier .)


state 6

    (92) type_specifier -> VOID .
